--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucia": "^3.2.0",
+    "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "oslo": "^1.2.1",
     "prisma": "^5.19.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
