--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.19.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucia": "^3.2.0",
