--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucia": "^3.2.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "oslo": "^1.2.1",
     "prisma": "^5.19.1",
     "react": "^18",
