--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.19.1",
+    "@tabler/icons": "^3.14.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucia": "^3.2.0",
-    "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.1",
