--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tabler/icons": "^3.14.0",
     "@tabler/icons-react": "^3.14.0",
     "arctic": "^1.9.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucia": "^3.2.0",
