--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tabler/icons": "^3.14.0",
     "@tabler/icons-react": "^3.14.0",
+    "@tanstack/react-query": "^5.56.2",
     "arctic": "^1.9.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
